# flash_im_by_ai

./: .gitignore  analysis_options.yaml
.kiro/skills/flash-im-ui-style/: SKILL.md
.kiro/skills/flutter-implementing-navigation-and-routing/: SKILL.md
.kiro/skills/mermaid-diagram-writing/: SKILL.md
.kiro/steering/: feature-analyst.md  feature-archiver.md  feature-designer.md  feature-mermaid-maker.md  feature-sync.md  feature-task-maker.md  feature-workflow.md  interviewer.md  link-test-writer.md  project-context.md
client/: .gitignore  README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/playground/: config.dart  playground_page.dart
client/lib/src/: app.dart  config.dart  home_page.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/Runner.xcodeproj/: project.pbxproj
client/modules/flash_auth/: pubspec.yaml
client/modules/flash_im_cache/: pubspec.yaml
client/modules/flash_im_chat/: pubspec.yaml
client/modules/flash_im_conversation/: pubspec.yaml
client/modules/flash_im_core/: pubspec.yaml
client/modules/flash_im_friend/: pubspec.yaml
client/modules/flash_im_group/: pubspec.yaml
client/modules/flash_im_search/: pubspec.yaml
client/modules/flash_session/: pubspec.yaml
client/modules/flash_shared/: pubspec.yaml
client/modules/flash_starter/: pubspec.yaml
client/test/: login_for_test.dart  test_env.dart  widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
client/windows/runner/: Runner.rc  main.cpp
docs/develop/report/: conversation_dev_report.md  ws_auth_dev_report.md  登录状态管理演化.md
docs/develop/version/: v.md
docs/features/archiver/: index.md
docs/research/project/: auth_overview.md  conversation_list_analysis.md  database_selection.md  report.md  rust_web.md  websocket_vs_http.md  ws_auth_flow.md
docs/symbol/doc/: mermaid.md
flash_starter/: pubspec.yaml
flash_starter/test/: flash_starter_test.dart
proto/: message.proto  ws.proto
scripts/client/: export_db.bat  export_db.py  run.ps1  run.py
scripts/database/: db_init.ps1  db_reset.ps1  reset_and_seed.ps1  start_postgres.ps1
scripts/database/im_seed/: seed.ps1
scripts/doc/: mermaid_to_png.py
scripts/proto/: gen.ps1  gen.py
scripts/server/: README.md  data_handler.py  reset_db.ps1  reset_db.py  start.ps1  start.py
scripts/server/im/: create_group.py  send_friend_request.py
scripts/server/im_seed/: seed-data.json  (+1 more)
scripts/setup/: install_postgres.ps1
server/: .env  Cargo.toml
server/migrations/: 20250320_001_auth.sql  20260329_002_conversations.sql  20260330_003_messages.sql  20260407_004_friends.sql  20260412_005_group.sql  20260419_006_group_join.sql  20260420_007_group_manage.sql
server/modules/app-storage/: Cargo.toml
server/modules/app-storage/src/: api.rs  image.rs  lib.rs  service.rs
server/modules/flash-auth/: Cargo.toml
server/modules/flash-auth/src/: handler.rs  jwt.rs  lib.rs  model.rs  routes.rs
server/modules/flash-core/: Cargo.toml
server/modules/flash-core/src/: error.rs  jwt.rs  lib.rs  state.rs
server/modules/flash-user/: Cargo.toml
server/modules/flash-user/src/: handler.rs  lib.rs  model.rs  routes.rs
server/modules/im-conversation/: Cargo.toml
server/modules/im-conversation/src/: lib.rs  models.rs  repository.rs  routes.rs  service.rs
server/modules/im-friend/: Cargo.toml
server/modules/im-friend/src/: api.rs  lib.rs  models.rs  repository.rs  service.rs
server/modules/im-group/: Cargo.toml
server/modules/im-group/src/: lib.rs  models.rs  repository.rs  routes.rs  service.rs
server/modules/im-message/: Cargo.toml
server/modules/im-message/src/: broadcast.rs  lib.rs  models.rs  repository.rs  routes.rs  seq.rs  service.rs
server/modules/im-ws/: Cargo.toml  README.md  build.rs
server/modules/im-ws/src/: broadcaster.rs  dispatcher.rs  handler.rs  lib.rs  proto.rs  state.rs
server/src/: group_routes.rs  main.rs  state.rs
server/src/auth/: handler.rs  jwt.rs  mod.rs  model.rs  routes.rs
server/src/mock/: handler.rs  routes.rs
server/src/user/: handler.rs  routes.rs
server/src/ws/: auth.rs  chat_room.rs  handler.rs  mod.rs  routes.rs
server/static/: ws_test.html
(+500 files in other folders)
