[package]
name = "flash-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-core = { path = "../flash-core" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
