[package]
name = "im-group"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-core = { path = "../flash-core" }
im-message = { path = "../im-message" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
