[package]
name = "im-message"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-core = { path = "../flash-core" }
im-conversation = { path = "../im-conversation" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
