[package]
name = "im-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-core = { path = "../flash-core" }
im-message = { path = "../im-message" }
prost = "0.13"
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
prost-build = "0.13"
